--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -115,8 +115,9 @@
         <hr>
 
         <div class="copyright">
-            © 2025 www.myntra.com. All rights reserved.
+            © 2025JeevanKami. All rights reserved.
         </div>
     </footer>
 </body>
+
 </html>
